# mosaic-app

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  package-lock.json  package.json  playwright.config.ts  rustfmt.toml  temp.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.sqlx/: query-22be3f44cbc96f6c1d43c4e7026b89e9f24c932b6a9aaefd6d5b6eaaf43102c4.json  query-282b33b8b3cbdebe2644cc36615d5ee4e9e4d953fc132716a0b7dda8dca36fe4.json  query-2ca4f6c55a5b660a1632ca3f255b2d4e25a51dbc73a2f5093b0ebb174d3aaa92.json  query-3c33bdc6835fe6466cb7cf42c15e92db82d38f1a077506716254448758e3d619.json  query-444bc1472d5392424be336889cfcf0944e54757e312db49d822eb0aa4c4e4a24.json  query-45bc4b04cb943e0c5ad322ed87c7fe6d588fe0bc57e89ec965b91c4c555359a9.json  query-6c505d8c653d2f0f95a669c5a0dbeabc750fe2a0749e30a3e8d5703199de637f.json  query-7cecd854e11598649c59b841de54f3a6c5e8c68fba7a9f82aadd62a2b90a0bbe.json  query-8799b2488360b9e56ec15255eea9dd998b34c7f97ee56e880e454983460c6be1.json  query-87f4eb82382e175de89b280a90f6273698ac85f6ee42ad27bec3c50d546c5c73.json  query-8f480af59ee0dfde7655f5195b1c3230c2ef1a133d44f65016f46c31b956e848.json  query-965f199eda60e41f929c4811bb02b1de7e2644bc8fdfcd31f6aae4f8e38148ea.json  query-b02a2b3038c300c88f5de494da2a3950201430ad870cc75d954ddc0b985c3f89.json  query-bd55f8680b2491566f45991217af4590a6e409a795cd5ff3d64ba0af9e87ef82.json  query-c22a433aa24e0c10163d03e487fed6729ff6d06b62d12b55ccb307d296cfd628.json  query-d5ca403051703b69e212f0af9a16c454e7c7385a145e5d79dc1331e71727207c.json  query-fbfa029034ac452b16dc0f0ee07bb3cbf2131785056f03e4aa249952a8284edb.json
docs/: PLAN.md  TODO.md  architecture.md
src/: .env.example  docker-compose.yml  error.rs  init-db.sql  lib.rs
src/backend/: Cargo.toml
src/backend/.sqlx/: query-1940055f4dba5f1b9be4d58426f9e453787f81eddd66502ae9a07d5565640b9d.json  query-33b9eeaeb200a6c312c229382079183368ef5c342c235155c3a67fa460691b74.json  query-8d111b46c7251ff6915a2d2ee2e03b4eac26b5234c8524e909ba6b5761906f40.json  query-9e78e942612806825c8e5fc4afa29157f6edc672d59acaac8ce047bef7666f19.json  query-a19ba9b26087c49852f1f2d2bb9d4c5b9744cb89a2e8774403342b4140eb3366.json  query-af406254f73ca8a015cd2c3eb7d180768fa4be697a1c727867f0fcf62c5abab3.json  query-c68173350bdd0dc03fadcb0f70b28fa96415271a361fd78cd0aea39e58200d37.json  query-d2f50cb890228ca57c3a4747a7e14147fedccb627c988199e331efb11b3bb627.json  query-ead13ccc6746877a08c203f282121bf1c9dc20016d331ae39458acd999a274bb.json  query-fddd334e572f6dabf963fe822380ea3eb66063efa085b8be37c5dfd40cf5bbc9.json
src/backend/src/: config.rs  error.rs  main.rs  spa.rs
src/backend/src/api/: dashboards.rs  mod.rs  panels.rs  templates.rs  users.rs
src/backend/src/auth/: handlers.rs  middleware.rs  mod.rs  password.rs  session.rs
src/backend/src/db/: mod.rs
src/backend/src/db/migrations/: 20260217000001_initial_schema.sql
src/backend/src/db/repos/: dashboard_repo.rs  mod.rs  panel_repo.rs  template_repo.rs  user_repo.rs
src/backend/src/orchestrator/: grafana_client.rs  mod.rs  nocodb_client.rs  provisioner.rs
src/backend/src/proxy/: grafana.rs  mod.rs  nocodb.rs
src/bootstrap/: Dockerfile  init.sh  portal-init.sh
src/config/: mod.rs
src/frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json
src/frontend/src/: app.rs  main.rs  router.rs
src/frontend/src/api/: auth.rs  client.rs  dashboards.rs  mod.rs  templates.rs  users.rs
src/frontend/src/components/: mod.rs
src/frontend/src/components/auth/: login_page.rs  mod.rs
src/frontend/src/components/common/: dropdown.rs  icon.rs  loading.rs  mod.rs  modal.rs  toast.rs
src/frontend/src/components/grid/: dashboard_grid.rs  grid_engine.rs  grid_item.rs  mod.rs
src/frontend/src/components/layout/: mod.rs  shell.rs  sidebar.rs  topbar.rs
src/frontend/src/components/panels/: grafana_panel.rs  markdown_panel.rs  mod.rs  nocodb_panel.rs  panel_frame.rs  panel_picker.rs
src/frontend/src/components/templates/: field_editor.rs  mod.rs  template_list.rs  template_wizard.rs
src/frontend/src/context/: auth_context.rs  mod.rs  theme_context.rs
src/frontend/src/hooks/: mod.rs  use_api.rs  use_auth.rs
src/frontend/src/models/: dashboard.rs  mod.rs  template.rs  user.rs
src/frontend/src/pages/: admin_users.rs  dashboard_list.rs  dashboard_view.rs  mod.rs  settings.rs
src/postgres/: Dockerfile
(+4 files in other folders)
